0.9.8 (trunk):
* Add support for OCaml 4.01.0 in addition to the existing 4.00.1 runtime.
* Major refresh of the NS3 simulation backend, for latest APIs.
* Add `Netif` statistics counters per-packet.
* [xen] Fix multi-page ring support by granting the correct data pages.

0.9.7 (5-Oct-2013):
* Add Travis continuous integration scripts.
* [xen] fix suspend/resume
* [xen] switch to interrupts (SCHEDOP_block) rather than polling (SCHEDOP_poll)
  to allow more than 128 event channels
* [xen] add Activations.after interface to help drivers avoid losing interrupts
* Fix build on older gcc (4.4) versions, as found in CentOS 6.4.

0.9.6 (27-Aug-2013):
* [xen] adapt to new xenstore interface which allows the same code
  to be compiled under Unix userspace and xen kernelspace

0.9.5 (09-Aug-2013):
* Add the `mir-rt` regression runner to `scripts/` (not installed).
* Unhook `mir-run` from the build, as Mirari replaces it.
* [xen] Port Netif to use the `Macaddr` module from `ocaml-ipaddr`.

0.9.4 (07-Aug-2013):
* [xen] add atomic load/store bindings for shared memory rings
* [xen] add atomic operations necessary for vchan
* [xen] expose memory barriers via Xenctrl ocamlfind package

0.9.3 (18-July-2013):
* [xen] Prevent spinning in `Activations.run` when a thread is blocked
  and then awakened.
* [xen] Gnt.grant_table_index is now an int, was an int32.
* [xen] Cleaned some C stubs files, mainly page_stubs.c
* [xen] Improved module Netif: The function create do not take a
  callback anymore, hidden some private function from the .mli.
* [unix] Add support for building and running on FreeBSD.

0.9.2 (09-July-2013):
* [xen] Add Netif test to wait for a fixed number of ring slots > 0
* [xen] Add Evtchn.close to Xen backend.
* [xen] Disable tree-loop-distribute-patterns to workaround crash with
  gcc-4.8.  Temporary fix until we isolate the bug.
* [xen] Improved the interface of Io_page, implement some missing bits
  in Gnt.