@@ -3,6 +3,7 @@
 * Major refresh of the NS3 simulation backend, for latest APIs.
 * Add `Netif` statistics counters per-packet.
 * [xen] Fix multi-page ring support by granting the correct data pages.
+* [unix] flush OS.Console file descriptor more often (#108). 
 
 0.9.7 (5-Oct-2013):
 * Add Travis continuous integration scripts.
